Updated information, uploaded new school flyer, uploaded a daycare flyer and picture. Updated many information and solved menu icon not showing
Updated information, uploaded new school flyer, uploaded a daycare flyer and picture. Updated many information and solved menu icon not showing

--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,9 @@ body {
 }
 
 
-
+.gap{
+    margin: 80px 0;
+}
 
 /*ACCESORIES*/
 
